<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutOnglet2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:id="@+id/textViewOnglet2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab2"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>
    <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notification"
            android:id="@+id/add_notif"
            android:textSize="4mm"
            android:layout_marginTop="20dp"
           />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suppr Notif"
            android:id="@+id/supp_notif"
            android:textSize="4mm"
            android:layout_marginTop="20dp"
            />
    -->

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/bouton_dmr"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jour_om"
                android:textSize="4mm"
                android:id="@+id/jour_om"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false">


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/bouton_jaune"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jour_jaune"
                android:textSize="4mm"
                android:id="@+id/jour_jaune"
                android:layout_marginLeft="30dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="20dp" />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" NOTIFICATION "
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:id="@+id/add_notif"
            android:textSize="3mm"
            android:layout_marginTop="400dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</LinearLayout>